test/lattests/extensions/var/bad/varInArg.lat
int foo(var x) { return x; }